--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.3"
-  }
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.3",
+    "nodemon": "^3.1.3",
+    "typescript": "^5.8.3"
+  },
+  "keywords": []
 }
